# Wyckoff-Analysis

./: .claude.example.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  GLOSSARY.md  README.md  README_STRATEGY.md  mcp_server.py  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.metrics/: func_whitelist.json  loc.json
.openclaw/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  workspace-state.json
agents/: __init__.py  backtest_tools.py  candidate_guards.py  chat_tools.py  diagnosis_tools.py  history_tools.py  local_tools.py  market_tools.py  portfolio_tools.py  recommendation_tools.py  report_tools.py  research_tools.py  screen_tools.py  search_tools.py  session_manager.py  stock_data_helpers.py  strategy_policy_context.py  strategy_tools.py  stream_events.py  tool_context.py  tool_security.py
app/: auth_component.py  layout.py  navigation.py  pipeline_renderers.py  single_stock_logic.py
cli/: __main__.py  _provider_factory.py  agent.py  auth.py  background.py  commands.py  compaction.py  context_archive.py  dashboard.py  dashboard_html.py  diagnostic_export.py  event_stream.py  loop_guard.py  memory.py  model_registry.py  model_router.py  progress.py  prompt_templates.py  provider_factory.py  runtime.py  scheduler.py  scratchpad.py  screen_intent.py  session_context.py  session_tools.py  skills.py  sub_agent_prompts.py  sub_agents.py  tool_results.py  tools.py  tui.py  ui.py
core/: _price_math.py  a_share_entry_research.py  ai_candidate_allocation.py  backtest_config.py  backtest_crash_probe.py  backtest_execution.py  backtest_grid_ranking.py  backtest_metrics.py  backtest_performance.py  backtest_portfolio.py  backtest_replay.py  backtest_report.py  backtest_run.py  backtest_selection.py  batch_report.py  candidate_actions.py  candidate_guards.py  candidate_lanes.py  candidate_metadata.py  candidate_policy.py  candidate_preference.py  candidate_quality.py  candidate_ranker.py  candidate_report_semantics.py  candidate_selection_score.py  candidate_tracks.py  capital_migration.py  cash_portfolio.py  cn_boards.py  compliance_report.py  concept_filters.py  constants.py  dynamic_policy.py  (+48 more)
(+898 files in other folders)
